# Nomenclate

./: .coveragerc  .coveralls.yml  .gitignore  .pypirc  .readthedocs.yml  .requirements.txt.swp  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  update-and-push.sh
.circleci/: config.yml
HOME_PATH/.nomenclate/: ui_state.json
docs/: Makefile  conf.py  index.rst  index.txt  make.bat  modules.rst  nomenclate.core.configurator.rst  nomenclate.core.errors.rst  nomenclate.core.formatter.rst  nomenclate.core.nameparser.rst  nomenclate.core.nomenclature.rst  nomenclate.core.processing.rst  nomenclate.core.renderers.rst  nomenclate.core.rendering.rst  nomenclate.core.rst  nomenclate.core.tokens.rst  nomenclate.core.tools.rst  nomenclate.rst  nomenclate.ui.rst  requirements.txt
docs/_autosummary/: nomenclate.core.configurator.rst  nomenclate.core.errors.rst  nomenclate.core.formatter.rst  nomenclate.core.nameparser.rst  nomenclate.core.nomenclature.rst  nomenclate.core.rendering.rst  nomenclate.core.rst  nomenclate.core.tokens.rst  nomenclate.core.tools.rst  nomenclate.rst
nomenclate/: __init__.py  __main__.py  app.py  settings.py  version.py
nomenclate/core/: __init__.py  configparser.py  configurator.py  env.ini  env.yml  errors.py  exceptions.py  file_utils.py  formatter.py  nameparser.py  nlog.py  nomenclate.py  nomenclative.py  nomenclature.py  processing.py  renderers.py  rendering.py  tokens.py  toolbox.py  tools.py
nomenclate/core/template/: env.yml
nomenclate/ui/: accordion_tree.py  accordion_widget.py  default.py  drag_drop.py  file_list.py  filesystem.py  format_widget.py  input_widgets.py  instance_handler.py  main.py  nomenclate_UI.py  object_list.py  platform.py  run.py  token_widget.py  utils.py
nomenclate/ui/components/: accordion_widget.py  default.py  filesystem.py  format_widget.py  gui_save.py  input_widgets.py  object_model.py  token_widget.py
nomenclate/ui/resource/: dark-too-cool.qss  (+7 more)
scripts/: update-and-push.sh
src/: __init__.py
tests/: .noserc  basetest.py  hints.qssarchive  no_sequencer.py  nose.cfg  test_acceptance_workflow.py  test_configurator.py  test_formatter.py  test_nameparser.py  test_nomenclate.py  test_nomenclative.py  test_nomenclature.py  test_processing.py  test_renderers.py  test_rendering.py  test_sequencer.py  test_tokens.py  test_tokens_handler.py  test_tools.py
tests/acceptance/: test_acceptance_workflow.py
tests/core/: test_nameparser.py  test_sequencer.py
